--- a/src/pages/AuthPage/Login.css
+++ b/src/pages/AuthPage/Login.css
@@ -1,31 +1,34 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .login_page{
-    width:50%;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 90px;
-    margin-bottom: 90px;
+    width: 50%;
+    margin: 90px auto;
     text-align: center;
 }
 
 .box{
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: auto;
-    margin-bottom: auto;
     width:600px;
-    height:600px;
+    height:900px;
+    margin: auto;
     background-color: #F3F3F3;
-    border-radius:10px;
+    border-radius:20px;
     border: 2px solid black;
 }
+
 .title {
     text-align: center;
     font-size: 40px;
+    padding-top: 25px;
 }
 
 .id{
     font-size: 30px;
     text-align: left;
+    padding-top: 60px;
     padding-left: 80px;
 }
 
@@ -37,13 +40,28 @@
 
 .forgot{
     text-decoration: underline;
+    text-align: right;
+    font-size: 18px;
+    padding-right: 80px;
+}
+
+.idbox input ,
+.passwordbox input{
+    width: 420px;
+    height: 70px;
+    padding: 10px 10px 10px 0px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    border-radius: 10px;
+    border: 2px solid black;
 }
 
 .login_button button ,
 .signin_button button {
     width: 420px;
+    height: 70px;
     padding: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     background-color: white;
     color: black;
     border: 2px solid black;
@@ -53,13 +71,8 @@
     font-size: 25px;
 }
 
-.idbox input ,
-.passwordbox input{
-    padding: 10px 10px 10px 0px;
-    border-radius: 10px;
-    border: 2px solid black;
-    width: 420px;
-    margin-bottom: 10px;
-    margin-top: 10px;
+.total_button{
+    margin-top: 200px;
 }
+
 
