--- a/src/pages/MainPage/main.css
+++ b/src/pages/MainPage/main.css
@@ -6,11 +6,11 @@
 
 .hello_box{
     background-color: #F3F3F3;
-    height: 250px;
-    width: 900px;
+    height: 25vh;
+    width: 70vw;
     text-align: center;
     margin-right: 50px;
-    margin-left: auto;
+    margin-left: 350px;
     margin-top: 70px;
 }
 
