[feat] add dashboard

--- a/src/pages/ManagePage/RoomForm.css
+++ b/src/pages/ManagePage/RoomForm.css
@@ -62,3 +62,11 @@
 .room-card:hover {
     transform: scale(1.05); /* 호버 시 카드 확대 */
 }
+
+.available {
+    background-color: #FFC0CB;
+}
+
+.occupied {
+    background-color: #90EE90;
+}
