--- a/src/pages/ManagePage/RoomCard.css
+++ b/src/pages/ManagePage/RoomCard.css
@@ -12,3 +12,40 @@
     justify-content: right;
     font-size: 10px;
 }
+.room-card-menu {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 10px;
+}
+
+.room-card-menu-select-btn{
+    display: inline-block;
+    border: none;
+    background: none;
+    cursor: pointer;
+    padding: 5px 10px;
+    margin: 5px 0;
+    white-space: nowrap;
+}
+
+.room-card-menu-select-btn:hover {
+    background-color: #f0f0f0;
+}
+.room-card-menu-btn {
+    width: 24px;
+    height: 24px;
+    background-image: url('./kebap-btn.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: none;
+    cursor: pointer;
+    position: relative;
+    top: 0px;
+    z-index: 100;
+    left: 120px;
+    background-color: transparent;
+}
