--- a/src/pages/AuthPage/MyPage.css
+++ b/src/pages/AuthPage/MyPage.css
@@ -11,6 +11,7 @@
     margin-top: 200px;
     background-color: #f3f3f3;
     border-radius: 10px;
+    text-align: left;
     border: 2px solid black;
     font-size: 25px;
 }
