--- a/src/pages/MainPage/Calendar.css
+++ b/src/pages/MainPage/Calendar.css
@@ -1,8 +1,10 @@
 .calendar {
     max-width: 450px;
-    margin-left: 400px;
-    border: 1px solid #ccc;
+    margin-top: 50px;
+    margin-left: 450px;
+    border: 2px solid #ccc;
     border-radius: 10px;
+    box-shadow: 0px 3px 6px #ccc;
     padding: 5px;
     font-size: 15px;
 }
@@ -18,6 +20,14 @@
     background-color: white;
     border: none;
     cursor: pointer;
+}
+
+.last_month button {
+    margin-left: 10px;
+}
+
+.next_month button {
+    margin-right: 10px;
 }
 
 .month {
