--- a/src/pages/MainPage/Sidebar.css
+++ b/src/pages/MainPage/Sidebar.css
@@ -4,8 +4,19 @@
     box-sizing: border-box;
 }
 
+.homeIcon{
+    color: white;
+}
+
+.peopleIcon{
+    display: inline-block;
+    color:#b4b1a7;
+    vertical-align: middle;
+    margin-right: 15px;
+}
+
 .sidebar {
-    width: 387px;
+    width: 390px;
     height: 100%;
     position: fixed;
     top:0;
@@ -18,11 +29,14 @@
     color: white;
     text-decoration: none;
 }
-.sidebar-open{
 
+ul{
+    margin-top: 200px;
 }
-.content{
-    margin-top: 100px;
+
+.sidebar_text{
+
+    font-size: 30px;
 }
 
 div{
@@ -36,20 +50,21 @@ div{
     margin-top: 50px;
 }
 
-.content1{
+.topbar{
     position: absolute;
     top: 0px;
     right: 20px;
     text-align: right;
 }
 
-.content2{
+.topbar_text{
     display: inline-block;
-    font-size: 14px;
-    padding-right: 15px;
+    font-size: 24px;
+    padding-right: 20px;
+    vertical-align: middle;
 }
 
-.content2 a {
+.topbar_text a {
     color: black;
     text-decoration: none;
 }
