--- a/src/pages/AuthPage/ForgotPassword.css
+++ b/src/pages/AuthPage/ForgotPassword.css
@@ -11,7 +11,7 @@
     margin-top: 100px;
 }
 
-p{
+.forgotpassword_msg{
     font-size: 30px;
     margin-top: 20px;
 }
@@ -22,9 +22,11 @@ p{
     border-radius: 5px;
     border: 1px solid black;
     margin-top: 20px;
+    font-size: 25px;
+    padding-left: 10px;
 }
 
-button {
+.forgotpassword_button button {
     height: 40px;
     width: 300px;
     border-radius: 5px;
