--- a/src/pages/AuthPage/MyPage.css
+++ b/src/pages/AuthPage/MyPage.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-.mypage{
+.my_page{
     width: 1343px;
     height: 443px;
     margin-left: 480px;
@@ -16,25 +16,26 @@
     font-size: 25px;
 }
 
-h1{
+.mypage_text{
     margin-top: 10px;
-    font-size: 40px;
-    font-weight: 400;
-    margin-left: 30px;
+    margin-bottom: 10px;
+    font-size: 30px;
+    font-weight: 700;
+    margin-left: 20px;
 }
 
-.total{
-    margin-left: 30px;
+.mypage_totalbox{
+    margin-left: 20px;
     margin-top: 30px;
 }
 
-.signout_button button{
+.mypage_signout_button button{
     background-color: white;
     width: 130px;
     height: 40px;
     color: black;
     margin-left: 1200px;
-    margin-top: 40px;
+    margin-top: 50px;
     text-align: center;
     border: 2px solid black;
     border-radius: 10px;
