--- a/src/pages/AuthPage/Login.css
+++ b/src/pages/AuthPage/Login.css
@@ -15,8 +15,9 @@
     height:900px;
     margin: auto;
     background-color: #F3F3F3;
-    border-radius:20px;
-    border: 2px solid black;
+    border-radius: 16px;
+    border: 1px solid gray;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .login_title {
@@ -25,24 +26,37 @@
     padding-top: 25px;
 }
 
-.login_id{
+.login_id_text{
     font-size: 30px;
     text-align: left;
     padding-top: 60px;
-    padding-left: 80px;
+    padding-left: 90px;
 }
 
-.login_password{
+.login_password_text{
     font-size: 30px;
     text-align: left;
-    padding-left: 80px;
+    padding-left: 90px;
+}
+
+.login_id, .login_password{
+    margin-top: 15px;
 }
 
 .login_forgot_msg{
-    text-decoration: underline;
     text-align: right;
     font-size: 18px;
     padding-right: 80px;
+}
+
+.login_forgot_msg a {
+    color: #333333;
+    text-decoration: underline;
+}
+
+.login_forgot_msg a:hover{
+    font-weight: 600;
+    cursor: pointer;
 }
 
 .login_idbox input ,
@@ -53,9 +67,14 @@
     margin-bottom: 10px;
     margin-top: 10px;
     border-radius: 10px;
-    border: 2px solid black;
+    border: 1px solid gray;
     font-size: 25px;
     padding-left: 10px;
+}
+
+.login_idbox input:hover ,
+.login_passwordbox input:hover{
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .login_button button ,
@@ -65,16 +84,23 @@
     padding: 10px;
     margin-bottom: 20px;
     background-color: white;
-    color: black;
-    border: 2px solid black;
+    color: #333333;
+    border: 1px solid gray;
     border-radius: 10px;
     cursor: pointer;
     font-weight: 400;
     font-size: 25px;
 }
 
+.login_button button:hover ,
+.signin_button button:hover{
+    font-weight: 600;
+    cursor: pointer;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
 .login_total_button{
-    margin-top: 200px;
+    margin-top: 250px;
 }
 
 
