--- a/src/pages/AuthPage/SignUp.css
+++ b/src/pages/AuthPage/SignUp.css
@@ -5,13 +5,14 @@
 }
 
 .signup_page{
-    width: 50%;
+    width: 40%;
     margin: auto;
     text-align: center;
+    margin-top: 40px;
 }
 
 .signup_text{
-    font-size: 30px;
+    font-size: 25px;
     margin-top: 20px;
 }
 
@@ -26,17 +27,36 @@
     height: 40px;
     width: 300px;
     padding-left: 5px;
+    margin-bottom: 10px;
     border-radius: 5px;
-    border: 1px solid black;
+    font-size: 15px;
+    border: 1px solid gray;
+}
+
+.signup_email input:hover,
+.signup_password_input input:hover,
+.signup_name input:hover,
+.signup_gender select:hover,
+.signup_birth input:hover,
+.signup_phone_number input:hover,
+.signup_age input:hover,
+.signup_etc input:hover{
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .signup_button button {
     height: 40px;
     width: 300px;
     border-radius: 5px;
-    border: 1px solid black;
+    border: 1px solid gray;
     margin-top: 30px;
+    background-color: white;
+}
 
+.signup_button button:hover{
+    font-weight: 600;
+    cursor: pointer;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .signup_box{
