--- a/src/pages/MainPage/main.css
+++ b/src/pages/MainPage/main.css
@@ -11,6 +11,12 @@
     text-align: center;
     margin-left: 450px;
     margin-top: 50px;
+    border-radius: 16px;
+}
+
+.main_hello_box:hover{
+    text-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .main_text1{
@@ -19,6 +25,6 @@
 }
 
 .main_text2{
-    margin-top: 20px;
+    margin-top: 30px;
     font-size: 32px;
 }
