--- a/src/pages/MainPage/Calendar.css
+++ b/src/pages/MainPage/Calendar.css
@@ -3,11 +3,15 @@
     height: 300px;
     margin-top: 50px;
     margin-left: 450px;
-    border: 1px solid gray;
+    border: 1px solid white;
     border-radius: 16px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     padding: 5px;
     font-size: 15px;
+}
+
+.calendar_page:hover{
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .cal_controls {
