--- a/src/pages/ManagePage/RoomForm.css
+++ b/src/pages/ManagePage/RoomForm.css
@@ -7,39 +7,30 @@
 .room-manager {
     width: 1400px;
     height: 860px;
-    margin-left: 452px;
-    margin-top: 92px;
+    margin-left: 450px;
+    margin-top: 30px;
 }
 
-.title {
+.roomform_title {
     padding-top: 10px;
-    margin-bottom: 0px;
-    font-size: 20px;
-    font-weight: bold;
-    background: #F3F3F3;
-    width: 200px;
+    margin-bottom: 10px;
+    font-size: 30px;
+    font-weight: 600;
+    width: 100px;
     height: 50px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    color: #333333;
 }
-.title-inner{
-    padding-top: 5px;
-    text-align: center;
-    background: #ffffff;
-    border-radius: 10px;
-    width: 180px;
-    height: 40px;
-    margin-left: 10px;
-    margin-bottom: 5px;
-}
+
 .room-form{
     background: #F3F3F3;
     padding-top: 10px;
     padding-left: 10px;
     width: 1400px;
     height: 800px;
-
+    border-radius: 16px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
+
 .room-list {
     margin-left: 30px;
     margin-top: 30px;
@@ -62,6 +53,7 @@
 
 .room-card:hover {
     transform: scale(1.05);
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .available {
@@ -69,5 +61,6 @@
 }
 
 .occupied {
-    background-color: #90EE90;
+    background-color: white;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
