--- a/src/pages/AuthPage/ForgotPassword.css
+++ b/src/pages/AuthPage/ForgotPassword.css
@@ -17,19 +17,32 @@
 }
 
 .forgotpassword_email input{
-    height: 40px;
-    width: 300px;
+    height: 60px;
+    width: 500px;
     border-radius: 5px;
-    border: 1px solid black;
-    margin-top: 20px;
-    font-size: 25px;
+    border: 1px solid white;
+    margin-top: 50px;
+    font-size: 20px;
     padding-left: 10px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.forgotpassword_email input:hover{
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .forgotpassword_button button{
-    height: 40px;
-    width: 300px;
+    height: 60px;
+    width: 500px;
     border-radius: 5px;
-    border: 1px solid black;
-    margin-top: 10px;
+    border: 1px solid #F3F3F3;
+    margin-top: 15px;
+    font-size: 20px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.forgotpassword_button button:hover{
+    font-weight: 600;
+    cursor: pointer;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
