--- a/src/pages/LogPage/LogForm.css
+++ b/src/pages/LogPage/LogForm.css
@@ -8,13 +8,16 @@
     background: #F3F3F3;
     width: 1350px;
     height: 850px;
-    margin-left: 477px;
-    margin-top: 72px;
+    margin-left: 450px;
+    margin-top: 50px;
     overflow: auto;
+    border-radius: 16px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 ::-webkit-scrollbar {
     display: none;
 }
+
 .room-info {
     display: flex;
     margin-left: 30px;
@@ -22,12 +25,16 @@
 }
 
 .log-room-num {
+    margin-top: 10px;
     font-size: 60px;
+    color: #333333;
+    font-weight: 600;
 }
 
 .patient-name {
     font-size: 35px;
     margin-left: 15px;
+    color: #333333;
 }
 
 .log-list {
