--- a/src/pages/MainPage/Sidebar.css
+++ b/src/pages/MainPage/Sidebar.css
@@ -4,8 +4,16 @@
     box-sizing: border-box;
 }
 
-.homeIcon{
+.mainhome_sidebar, .dashboard_sidebar, .patientlist_sidebar, .setting_sidebar {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    margin-left: 40px;
+}
+
+.homeIcon, .dashboardIcon, .patientlistIcon, .settingIcon {
     color: white;
+    margin-right: 10px;
 }
 
 .peopleIcon{
@@ -30,18 +38,20 @@
     text-decoration: none;
 }
 
+.sidebar_mainhome_text, .sidebar_dashboard_text, .sidebar_patientlist_text, .sidebar_setting_text{
+    display: inline-block;
+    vertical-align: middle;
+    padding: 10px;
+    font-size: 28px;
+}
+
 .sidebar a:hover{
     font-weight: 600;
-    text-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 ul{
     margin-top: 200px;
-}
-
-.sidebar_text{
-    padding: 10px;
-    font-size: 28px;
 }
 
 .sidebar-divider {
