--- a/src/pages/MainPage/main.css
+++ b/src/pages/MainPage/main.css
@@ -12,11 +12,12 @@
     margin-left: 450px;
     margin-top: 50px;
     border-radius: 16px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .main_hello_box:hover{
     text-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .main_text1{
@@ -27,4 +28,8 @@
 .main_text2{
     margin-top: 30px;
     font-size: 32px;
+}
+
+.main_sub{
+    display: flex;
 }
