--- a/src/pages/ManagePage/PatientForm.css
+++ b/src/pages/ManagePage/PatientForm.css
@@ -8,10 +8,10 @@
     width: 1340px;
     height: 430px;
     margin-left: 450px;
-    margin-top: 50px;
+    margin-top: 20px;
     background-color: #f3f3f3;
     border-radius: 10px;
-    border: 1px solid gray;
+    border: 1px solid #f3f3f3;
     font-size: 25px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
@@ -20,6 +20,15 @@
     margin-left: 20px;
     margin-top: 20px;
     text-align: left;
+}
+
+.patientform_text{
+    margin-top: 20px;
+    margin-bottom: 15px;
+    margin-right: 870px;
+    font-size: 30px;
+    font-weight: 600;
+    color: #333333;
 }
 
 .patient_name, .patient_age, .patient_gender,
@@ -37,14 +46,14 @@
     margin-left: 1200px;
     margin-top: 10px;
     text-align: center;
-    border: 1px solid gray;
+    border: 1px solid #f3f3f3;
     border-radius: 10px;
     font-size: 22px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .patient_signout_button button:hover{
     font-weight: 600;
     cursor: pointer;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    /*transition: all 0.3s cubic-bezier(.25,.8,.25,1);*/
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
