--- a/src/pages/AuthPage/MyPage.css
+++ b/src/pages/AuthPage/MyPage.css
@@ -5,14 +5,11 @@
 }
 
 .my_page{
-    width: 1340px;
-    height: 440px;
+    width: 1000px;
+    height: 500px;
     margin-left: 480px;
-    background-color: #f3f3f3;
     border-radius: 16px;
     text-align: left;
-    border: 1px solid #F3F3F3;
-    font-size: 25px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.15);
 }
 
@@ -30,12 +27,44 @@
     margin-top: 45px;
 }
 
-.mypage_name, .mypage_birth, .mypage_gender, .mypage_email, .mypage_phone_num, .mypage_aff {
-    padding-bottom: 20px;
+.mypage_name{
+    width: 570px;
+    font-size: 40px;
     color: #333333;
+    margin-left: 430px;
+    padding-top: 60px;
 }
 
-.mypage_signout_button button{
+.mypage_aff{
+    width: 570px;
+    height: 50px;
+    font-size: 20px;
+    color: #b4b4b6;
+    margin-left: 430px;
+    margin-top: 20px;
+    padding-bottom: 20px;
+}
+
+.mypage_line{
+    width: 570px;
+    border-top: 1px solid #767A83;
+    margin-left: 400px;
+}
+
+.mypage_age, .mypage_sex, .mypage_email, .mypage_phone_num, .mypage_etc {
+    width: 485px;
+    height: 40px;
+    font-size: 20px;
+    margin-left: 430px;
+    padding-bottom: 20px;
+    color: #767A83;
+}
+
+.mypage_info{
+    margin-top: 30px;
+}
+
+.mypage_signout_btn button{
     background-color: white;
     width: 130px;
     height: 40px;
@@ -49,8 +78,25 @@
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.15);
 }
 
-.mypage_signout_button button:hover{
+.mypage_signout_btn button:hover{
     font-weight: 600;
     cursor: pointer;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.edit-menu-btn {
+
+    width: 24px;
+    height: 24px;
+    background-image: url('./edit_btn.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: none;
+    cursor: pointer;
+    position: relative;
+    top: 0px;
+    z-index: 100;
+    left: 130px;
+    background-color: transparent;
 }
