--- a/src/pages/AuthPage/SignIn.css
+++ b/src/pages/AuthPage/SignIn.css
@@ -17,11 +17,13 @@
     color: #333333;
 }
 
+.signup_id input,
 .signup_email input,
 .signup_password_input input,
 .signup_name input,
-.signup_gender select,
+.signup_sex select,
 .signup_birth input,
+.signup_address input,
 .signup_phone_number input,
 .signup_age input,
 .signup_etc input{
@@ -52,9 +54,9 @@
     font-size: 20px;
     border-radius: 5px;
     color: #333333;
-    border: 1px solid #f3f3f3;
+    border: 1px solid #f3f6f9;
     margin-top: 30px;
-    background-color: #f3f3f3;
+    background-color: #f3f6f9;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
