--- a/src/pages/LogPage/LogForm.css
+++ b/src/pages/LogPage/LogForm.css
@@ -5,7 +5,7 @@
 }
 
 .log-form {
-    background: #F3F3F3;
+    background: #F3F6F9;
     width: 1350px;
     height: 850px;
     margin-left: 450px;
@@ -19,21 +19,20 @@
 }
 
 .room-info {
-    display: flex;
-    margin-left: 30px;
-    align-items: baseline;
+    margin-right: 1200px;
 }
 
 .log-room-num {
     margin-top: 10px;
-    font-size: 60px;
+    font-size: 45px;
     color: #333333;
     font-weight: 600;
 }
 
-.patient-name {
-    font-size: 35px;
+.log-patient-name {
     margin-left: 15px;
+    text-align: left;
+    font-size: 30px;
     color: #333333;
 }
 
@@ -47,7 +46,7 @@
 
 .log-card {
     width: 400px;
-    height: 300px;
+    height: 200px;
     border: 1px solid #ddd;
     border-radius: 15px;
     padding: 20px;
@@ -58,17 +57,25 @@
 
 .log-card:hover {
     transform: scale(1.05);
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .log-contents {
     text-align: left;
     font-size: 35px;
+    color: #333333;
+    margin-top: 40px;
+    margin-left: 150px;
 }
 
 .log-time {
     text-align: left;
-    font-size: 35px;
+    font-size: 25px;
+    margin-top: 10px;
+    margin-left: 150px;
+    color: #b3b3b3;
 }
+
 .log-card.normal {
     background-color: #ffffff;
 }
