--- a/src/pages/ManagePage/PatientInfoChangeForm.css
+++ b/src/pages/ManagePage/PatientInfoChangeForm.css
@@ -4,56 +4,63 @@
     box-sizing: border-box;
 }
 
-.patientform_page{
-    width: 1340px;
-    height: 430px;
-    margin-left: 450px;
-    margin-top: 20px;
-    background-color: #f3f3f3;
-    border-radius: 10px;
-    border: 1px solid #f3f3f3;
-    font-size: 25px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-}
-
-.patient_total_box{
-    margin-left: 20px;
-    margin-top: 20px;
-    text-align: left;
-}
-
-.patientform_text{
-    margin-top: 20px;
-    margin-bottom: 15px;
-    margin-right: 870px;
+.change_patient_text{
+    margin-top: 40px;
+    margin-right: 850px;
     font-size: 30px;
     font-weight: 600;
     color: #333333;
 }
 
-.patient_name, .patient_age, .patient_gender,
-.patient_height, .patient_weight, .patient_phone_num,
-.patient_emergency_num, .patient_home{
-    padding-bottom: 15px;
-    color: #333333;
-}
-
-.patient_signout_button button{
-    background-color: white;
-    width: 130px;
-    height: 40px;
-    color: #333333;
-    margin-left: 1200px;
-    margin-top: 10px;
-    text-align: center;
-    border: 1px solid #f3f3f3;
+.change_patient_boxes{
+    width: 1340px;
+    height: 430px;
+    margin-left: 450px;
+    margin-top: 30px;
+    background-color: #f3f6f9;
     border-radius: 10px;
-    font-size: 22px;
+    border: 1px solid #f3f6f9;
+    font-size: 25px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
-.patient_signout_button button:hover{
+
+.change_patient_id input, .change_patient_name input, .change_patient_age input, .change_patient_sex input,
+.change_patient_phone_num input, .change_patient_email input, .change_patient_managerid input,
+.change_patient_emergency_num input, .change_patient_address input{
+    width: 200px;
+    height: 50px;
+    color: #333333;
+}
+
+.change_patient_yesbtn button{
+    background-color: white;
+    width: 130px;
+    height: 40px;
+    color: #6D8FE4;
+    margin-left: 1200px;
+    margin-top: 10px;
+    text-align: center;
+    border: 3px solid #6D8FE4;
+    border-radius: 10px;
+    font-size: 22px;
+}
+
+.change_patient_nobtn button{
+    background-color: white;
+    width: 130px;
+    height: 40px;
+    color: #ababab;
+    margin-left: 1200px;
+    margin-top: 10px;
+    text-align: center;
+    border: 3px solid #ababab;
+    border-radius: 10px;
+    font-size: 22px;
+}
+
+.change_patient_button:hover{
     font-weight: 600;
     cursor: pointer;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
