--- a/src/pages/ManagePage/RoomCard.css
+++ b/src/pages/ManagePage/RoomCard.css
@@ -1,20 +1,24 @@
-.room-num{
-    font-size: 45px;
+
+
+.roomcard_address{
+    font-size: 25px;
+    text-align: left;
     color: #333333;
 }
 
-.status {
-    margin-top: 5px;
-    font-size: 20px;
+.roomcard_name {
+    margin-top: 10px;
+    text-align: left;
+    font-size: 22px;
     font-weight: bold;
     color: #333333;
 }
 
-.patient-info {
-    display: flex;
-    justify-content: right;
-    font-size: 10px;
-}
+/*.patient-info {*/
+/*    display: flex;*/
+/*    justify-content: right;*/
+/*    font-size: 10px;*/
+/*}*/
 
 .room-card-menu {
     position: absolute;
@@ -52,6 +56,6 @@
     position: relative;
     top: 0px;
     z-index: 100;
-    left: 120px;
+    left: 130px;
     background-color: transparent;
 }
