--- a/src/pages/AuthPage/SignIn.css
+++ b/src/pages/AuthPage/SignIn.css
@@ -5,10 +5,8 @@
 }
 
 .signup_page{
-    width: 40%;
-    margin: auto;
+    margin: 40px 0 40px 1130px;
     text-align: center;
-    margin-top: 40px;
 }
 
 .signup_text{
