--- a/src/pages/AuthPage/Login.css
+++ b/src/pages/AuthPage/Login.css
@@ -5,8 +5,7 @@
 }
 
 .login_page{
-    width: 50%;
-    margin: 90px auto;
+    margin: 90px 0 90px 1130px;
     text-align: center;
 }
 
@@ -14,7 +13,7 @@
     width:600px;
     height:900px;
     margin: auto;
-    background-color: #F3F6F9;
+    background-color: #ffffff;
     border-radius: 16px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
@@ -50,7 +49,8 @@
     margin-bottom: 10px;
     margin-top: 10px;
     border-radius: 10px;
-    border: 1px solid white;
+    background-color: #f3f6f9;
+    border: 1px solid #f3f6f9;
     font-size: 25px;
     padding-left: 10px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -67,9 +67,9 @@
     height: 70px;
     padding: 10px;
     margin-bottom: 20px;
-    background-color: white;
+    background-color: #f3f6f9;
     color: #333333;
-    border: 1px solid white;
+    border: 1px solid #f3f6f9;
     border-radius: 10px;
     cursor: pointer;
     font-weight: 400;
