--- a/src/pages/ManagePage/PatientForm.css
+++ b/src/pages/ManagePage/PatientForm.css
@@ -13,10 +13,15 @@
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.15);
 }
 
-.patient_total_box{
+.patientform_info_box{
     margin-left: 20px;
     margin-top: 45px;
 }
+
+/*.patientform_total_box{*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*}*/
 
 .patientform_text{
     margin-top: 40px;
@@ -27,12 +32,20 @@
     color: #333333;
 }
 
+.patientform_profile{
+    width: 320px;
+    height: 320px;
+    background-color: red;
+    margin-top: 90px;
+    margin-left: 30px;
+}
+
 .patient_name{
     width: 570px;
     font-size: 40px;
     color: #333333;
     margin-left: 430px;
-    padding-top: 60px;
+    /*padding-top: 60px;*/
 }
 
 .patient_home{
