--- a/src/pages/AuthPage/MyPage.css
+++ b/src/pages/AuthPage/MyPage.css
@@ -22,6 +22,15 @@
     color: #333333;
 }
 
+.mypage_profile{
+    width: 320px;
+    height: 320px;
+    background-color: red;
+    margin-top: 90px;
+    margin-left: 30px;
+    float: left;
+}
+
 .mypage_totalbox{
     margin-left: 20px;
     margin-top: 45px;
