--- a/src/pages/AuthPage/MyPage.css
+++ b/src/pages/AuthPage/MyPage.css
@@ -22,18 +22,24 @@
     color: #333333;
 }
 
+.mypage_info_box{
+    margin-left: 20px;
+    margin-top: 45px;
+}
+
 .mypage_profile{
     width: 320px;
     height: 320px;
-    background-color: red;
+    background-color: #6D8FE4;
     margin-top: 90px;
     margin-left: 30px;
     float: left;
 }
 
-.mypage_totalbox{
-    margin-left: 20px;
-    margin-top: 45px;
+.mypage_total_btn{
+    display: flex;
+    justify-content: left;
+    margin-top: 20px;
 }
 
 .mypage_name{
@@ -60,7 +66,7 @@
     margin-left: 400px;
 }
 
-.mypage_age, .mypage_sex, .mypage_email, .mypage_phone_num, .mypage_etc {
+.mypage_age, .mypage_sex, .mypage_email, .mypage_phone_num{
     width: 485px;
     height: 40px;
     font-size: 20px;
@@ -73,28 +79,8 @@
     margin-top: 30px;
 }
 
-.mypage_signout_btn button{
-    background-color: white;
-    width: 130px;
-    height: 40px;
-    margin-left: 1200px;
-    margin-top: 50px;
-    text-align: center;
-    border: 1px solid white;
-    border-radius: 10px;
-    font-size: 22px;
-    color: #333333;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.15);
-}
-
-.mypage_signout_btn button:hover{
-    font-weight: 600;
-    cursor: pointer;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-}
-
-.edit-menu-btn {
-
+.mypage_edit-menu-btn {
+    padding-bottom: 10px;
     width: 24px;
     height: 24px;
     background-image: url('./edit_btn.png');
@@ -106,6 +92,76 @@
     position: relative;
     top: 0px;
     z-index: 100;
-    left: 130px;
+    background-color: transparent;
+    margin-left: 90px;
+}
+
+.mypage_delete-menu-btn {
+    width: 24px;
+    height: 24px;
+    background-image: url('./trashbox_btn.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: none;
+    cursor: pointer;
+    position: relative;
+    top: 0px;
+    z-index: 100;
     background-color: transparent;
 }
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
+
+.modal.open {
+    display: block;
+}
+
+.modal_popup {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.modal_popup h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.modal_popup p {
+    margin-bottom: 20px;
+}
+
+.modal_buttons {
+    display: flex;
+    justify-content: center;
+}
+
+.modal_buttons button {
+    margin: 0 10px;
+    padding: 10px 20px;
+    background-color: royalblue;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    transition: box-shadow 0.2s;
+}
+
+.modal_buttons button:hover {
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
