--- a/src/pages/ManagePage/PatientForm.css
+++ b/src/pages/ManagePage/PatientForm.css
@@ -8,17 +8,14 @@
     width: 1000px;
     height: 500px;
     margin-left: 480px;
+    margin-bottom: 50px;
+    margin-top: 30px;
     border-radius: 16px;
     text-align: left;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.15);
 }
 
-.patientform_info_box{
-    margin-left: 20px;
-    margin-top: 45px;
-}
-
-.patientform_text{
+.patientform_text {
     margin-top: 40px;
     margin-bottom: 15px;
     margin-right: 800px;
@@ -27,81 +24,172 @@
     color: #333333;
 }
 
+.patientform_total_box{
+    display: flex;
+}
+
+.patientform_profile_box{
+    width: 350px;
+    height: 500px;
+    float: left;
+}
+
 .patientform_profile{
     width: 320px;
     height: 320px;
-    background-color: red;
+    background-color: #6D8FE4;
     margin-top: 90px;
     margin-left: 30px;
     float: left;
 }
 
-.patient_name{
-    width: 570px;
+.patientform_name_box{
+    width: 120px;
+    height: 50px;
     font-size: 40px;
     color: #333333;
-    margin-left: 430px;
-    padding-top: 60px;
+    margin-left: 80px;
 }
 
-.patient_home{
-    width: 570px;
-    height: 50px;
+.patientform_total_btn{
+    display: flex;
+    justify-content: left;
+    width: 85px;
+    height: 40px;
+    margin-top: 10px;
+}
+
+.patientform_first_info{
+    display: flex;
+    margin-top: 60px;
+}
+
+.patientform_home_box{
     font-size: 20px;
     color: #b4b4b6;
-    margin-left: 430px;
-    margin-top: 20px;
-    padding-bottom: 20px;
+}
+
+.patientform_second_info{
+    width: 570px;
+    height: 50px;
+    margin-top: 10px;
+    margin-left: 80px;
 }
 
 .patientform_line{
     width: 570px;
     border-top: 1px solid #767A83;
-    margin-left: 400px;
+    margin-left: 70px;
 }
 
-.patient_age, .patient_gender, .patient_phone_num,
-.patient_emergency_num, .patient_home{
-    width: 485px;
+.patientform_info_box_2{
+    margin-left: 70px;
+    margin-top: 20px;
+}
+
+.patientform_age_title, .patientform_gender_title, .patientform_phone_num_title,
+.patientform_emergency_num_title{
+    width: 100px;
     height: 40px;
     font-size: 20px;
-    margin-left: 430px;
-    padding-bottom: 20px;
+    margin-left: 20px;
+    margin-bottom: 10px;
+    color: #B4B4B6;
+}
+
+.patientform_age, .patientform_gender, .patientform_phone_num,
+.patientform_emergency_num{
+    margin-left: 60px;
+    font-size: 20px;
     color: #767A83;
+    display: flex;
 }
 
-.patient_info{
-    margin-top: 30px;
+.patientform_age_box, .patientform_gender_box, .patientform_phone_num_box,
+.patientform_emergency_num_box{
+    display: flex;
 }
 
-.patient_signout_button button{
-    background-color: white;
-    width: 130px;
-    height: 40px;
-    color: #6D8FE4;
-    margin-left: 840px;
-    margin-top: 40px;
-    text-align: center;
-    border: 3px solid #6D8FE4;
-    border-radius: 10px;
-    font-size: 22px;
-}
-
-.patientform_add_patient_button button{
-    background-color: white;
-    width: 130px;
-    height: 40px;
-    color: #ababab;
-    margin-left: 900px;
-    margin-top: 10px;
-    text-align: center;
-    border: 3px solid #ababab;
-    border-radius: 10px;
-    font-size: 22px;
-}
-
-.patientform_add_patient_button button:hover, .patient_signout_button button:hover{
-    font-weight: 600;
+.patientform_edit-menu-btn {
+    width: 24px;
+    height: 24px;
+    background-image: url('./edit_btn.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: none;
     cursor: pointer;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    position: relative;
+    top: 0px;
+    z-index: 100;
+    background-color: transparent;
+}
+
+.patientform_delete-menu-btn {
+    width: 24px;
+    height: 24px;
+    background-image: url('./trashbox_btn.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: none;
+    cursor: pointer;
+    position: relative;
+    top: 0px;
+    z-index: 100;
+    background-color: transparent;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
+
+.modal.open {
+    display: block;
+}
+
+.modal_popup {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.modal_popup h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.modal_popup p {
+    margin-bottom: 20px;
+}
+
+.modal_buttons {
+    display: flex;
+    justify-content: center;
+}
+
+.modal_buttons button {
+    margin: 0 10px;
+    padding: 10px 20px;
+    background-color: royalblue;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    transition: box-shadow 0.2s;
+}
+
+.modal_buttons button:hover {
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
