--- a/src/pages/AuthPage/MyPage.css
+++ b/src/pages/AuthPage/MyPage.css
@@ -8,12 +8,14 @@
     width: 1000px;
     height: 500px;
     margin-left: 480px;
+    margin-bottom: 50px;
+    margin-top: 30px;
     border-radius: 16px;
     text-align: left;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.15);
 }
 
-.mypage_text{
+.mypage_text {
     margin-top: 40px;
     margin-bottom: 15px;
     margin-right: 800px;
@@ -22,9 +24,14 @@
     color: #333333;
 }
 
-.mypage_info_box{
-    margin-left: 20px;
-    margin-top: 45px;
+.mypage_total_box{
+    display: flex;
+}
+
+.mypage_profile_box{
+    width: 350px;
+    height: 500px;
+    float: left;
 }
 
 .mypage_profile{
@@ -36,51 +43,74 @@
     float: left;
 }
 
+.mypage_name_box{
+    width: 120px;
+    height: 50px;
+    font-size: 40px;
+    color: #333333;
+    margin-left: 80px;
+}
+
 .mypage_total_btn{
     display: flex;
     justify-content: left;
-    margin-top: 20px;
+    width: 85px;
+    height: 40px;
+    margin-top: 10px;
 }
 
-.mypage_name{
-    width: 570px;
-    font-size: 40px;
-    color: #333333;
-    margin-left: 430px;
-    padding-top: 60px;
+.mypage_first_info{
+    display: flex;
+    margin-top: 60px;
 }
 
-.mypage_aff{
-    width: 570px;
-    height: 50px;
+.mypage_aff_box{
     font-size: 20px;
     color: #b4b4b6;
-    margin-left: 430px;
-    margin-top: 20px;
-    padding-bottom: 20px;
+}
+
+.mypage_second_info{
+    width: 570px;
+    height: 50px;
+    margin-top: 10px;
+    margin-left: 80px;
 }
 
 .mypage_line{
     width: 570px;
     border-top: 1px solid #767A83;
-    margin-left: 400px;
+    margin-left: 70px;
 }
 
-.mypage_age, .mypage_sex, .mypage_email, .mypage_phone_num{
-    width: 485px;
+.mypage_info_box_2{
+    margin-left: 70px;
+    margin-top: 20px;
+}
+
+.mypage_age_title, .mypage_sex_title, .mypage_phone_num_title,
+.mypage_email_title{
+    width: 100px;
     height: 40px;
     font-size: 20px;
-    margin-left: 430px;
-    padding-bottom: 20px;
-    color: #767A83;
+    margin-left: 20px;
+    margin-bottom: 10px;
+    color: #B4B4B6;
 }
 
-.mypage_info{
-    margin-top: 30px;
+.mypage_age, .mypage_sex, .mypage_phone_num,
+.mypage_email{
+    margin-left: 60px;
+    font-size: 20px;
+    color: #767A83;
+    display: flex;
+}
+
+.mypage_age_box, .mypage_sex_box, .mypage_phone_num_box,
+.mypage_email_box{
+    display: flex;
 }
 
 .mypage_edit-menu-btn {
-    padding-bottom: 10px;
     width: 24px;
     height: 24px;
     background-image: url('./edit_btn.png');
@@ -93,7 +123,6 @@
     top: 0px;
     z-index: 100;
     background-color: transparent;
-    margin-left: 90px;
 }
 
 .mypage_delete-menu-btn {
@@ -164,4 +193,3 @@
 .modal_buttons button:hover {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
-
