--- a/src/pages/AuthPage/MyPage.css
+++ b/src/pages/AuthPage/MyPage.css
@@ -155,7 +155,7 @@
     display: block;
 }
 
-.modal_popup {
+.mypage_modal_popup {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -165,31 +165,44 @@
     border-radius: 10px;
 }
 
-.modal_popup h3 {
+.mypage_modal_popup h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.modal_popup p {
+.mypage_modal_popup p {
     margin-bottom: 20px;
 }
 
-.modal_buttons {
+.mypage_modal_buttons {
     display: flex;
     justify-content: center;
 }
 
-.modal_buttons button {
+.mypage_modal_delete_btn button {
     margin: 0 10px;
     padding: 10px 20px;
-    background-color: royalblue;
-    border: none;
-    border-radius: 5px;
-    color: white;
+    background-color: white;
+    border: 3px solid #6D8FE4;
+    border-radius: 16px;
+    color: #6D8FE4;
     cursor: pointer;
     transition: box-shadow 0.2s;
 }
 
-.modal_buttons button:hover {
+.mypage_modal_cancel_btn button{
+
+    margin: 0 10px;
+    padding: 10px 20px;
+    background-color: white;
+    border: 3px solid #ababab;
+    border-radius: 16px;
+    color: #ababab;
+    cursor: pointer;
+    transition: box-shadow 0.2s;
+
+}
+
+.mypage_modal_buttons button:hover {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
