--- a/src/pages/ManagePage/PatientForm.css
+++ b/src/pages/ManagePage/PatientForm.css
@@ -155,7 +155,7 @@
     display: block;
 }
 
-.modal_popup {
+.patientform_modal_popup {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -165,29 +165,42 @@
     border-radius: 10px;
 }
 
-.modal_popup h3 {
+.patientform_modal_popup h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.modal_popup p {
+.patientform_modal_popup p {
     margin-bottom: 20px;
 }
 
-.modal_buttons {
+.patientform_modal_buttons {
     display: flex;
     justify-content: center;
 }
 
-.modal_buttons button {
+.patientform_modal_delete_btn button {
     margin: 0 10px;
     padding: 10px 20px;
-    background-color: royalblue;
-    border: none;
-    border-radius: 5px;
-    color: white;
+    background-color: white;
+    border: 3px solid #6D8FE4;
+    border-radius: 16px;
+    color: #6D8FE4;
     cursor: pointer;
     transition: box-shadow 0.2s;
+}
+
+.patientform_modal_cancel_btn button {
+
+    margin: 0 10px;
+    padding: 10px 20px;
+    background-color: white;
+    border: 3px solid #ababab;
+    border-radius: 16px;
+    color: #ababab;
+    cursor: pointer;
+    transition: box-shadow 0.2s;
+
 }
 
 .modal_buttons button:hover {
