--- a/src/pages/AuthPage/SignIn.css
+++ b/src/pages/AuthPage/SignIn.css
@@ -21,7 +21,7 @@
     text-align: left;
     width: 500px;
     height: 80px;
-    color: #496BF5;
+    color: #002455;
     font-weight: 600;
 }
 
@@ -54,7 +54,7 @@
 .signup_phone_number input:hover,
 .signup_age input:hover,
 .signup_address input:hover{
-    border: 3px solid #496BF5;
+    border: 3px solid #002455;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
@@ -64,10 +64,10 @@
     font-size: 20px;
     font-weight: 400;
     border-radius: 10px;
-    color: #ffffff;
-    border: 1px solid #496BF5;
+    color: #333333;
+    border: 1px solid #f3f6f9;
     margin-top: 30px;
-    background-color: #496BF5;
+    background-color: #f3f6f9;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
@@ -80,7 +80,7 @@
 .signup_hello_box{
     width: 1080px;
     height: 900px;
-    background-color: #496BF5;
+    background-color: #002455;
     border-radius: 100px;
     margin-left: 300px;
 }
