--- a/src/pages/NoticePage/EmergencyAlert.css
+++ b/src/pages/NoticePage/EmergencyAlert.css
@@ -67,6 +67,7 @@
 
 .emergency-alert .close-btn:hover {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    font-weight: 600;
 }
 
 /*@keyframes blink-animation {*/
