--- a/src/pages/AuthPage/Login.css
+++ b/src/pages/AuthPage/Login.css
@@ -5,8 +5,10 @@
 }
 
 .login_page{
-    text-align: center;
+    height: 100vh;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .login_hello_box{
@@ -14,6 +16,8 @@
     height: 900px;
     background-color: #002455;
     border-radius: 100px;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 .login_hello_text_1{
@@ -60,9 +64,10 @@
 .login_box{
     width:600px;
     height:900px;
-    margin-top: 50px;
+    margin-top: 100px;
     margin-left: 50px;
-    margin-bottom: 50px;
+    margin-bottom: 100px;
+    margin-right: 50px;
     background-color: #ffffff;
     border-radius: 16px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
