--- a/src/pages/AuthPage/SignIn.css
+++ b/src/pages/AuthPage/SignIn.css
@@ -5,24 +5,29 @@
 }
 
 .signup_page{
-    text-align: center;
+    height: 100vh;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .signup_box{
-    margin-top: 50px;
+    width: 500px;
+    height: 1000px;
+    padding-top: 150px;
+    margin-left: 150px;
+    padding-left: 50px;
 }
 
 .signup_title{
     font-size: 40px;
     margin-top: 20px;
-    margin-left: 20px;
-    padding-left: 40px;
     text-align: left;
     width: 500px;
     height: 80px;
     color: #002455;
     font-weight: 600;
+    padding-left: 30px;
 }
 
 .signup_id input,
@@ -82,7 +87,7 @@
     height: 900px;
     background-color: #002455;
     border-radius: 100px;
-    margin-left: 300px;
+    margin-left: 250px;
 }
 
 .signup_hello_text_1{
