--- a/src/pages/ManagePage/PatientInfoChangeForm.css
+++ b/src/pages/ManagePage/PatientInfoChangeForm.css
@@ -4,16 +4,28 @@
     box-sizing: border-box;
 }
 
-.change_patient_text{
-    margin-top: 40px;
-    margin-right: 850px;
-    font-size: 30px;
-    font-weight: 600;
-    color: #333333;
+.change_patient_page{
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
 }
 
-.change_patient_boxes{
-    width: 1340px;
+.change_patient_text{
+    height: 50px;
+    width: 400px;
+    margin-top: 40px;
+    text-align: left;
+    margin-bottom: 40px;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 30px;
+    font-weight: 600;
+    color: #002455;
+}
+
+.add_patient_box{
+    width: 400px;
     height: 430px;
     margin-left: 450px;
     margin-top: 30px;
@@ -24,21 +36,31 @@
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
-
-.change_patient_id input, .change_patient_name input, .change_patient_age input, .change_patient_sex input,
+.change_patient_id input, .change_patient_name input, .change_patient_age input, .change_patient_sex select,
 .change_patient_phone_num input, .change_patient_email input, .change_patient_managerid input,
 .change_patient_emergency_num input, .change_patient_address input{
-    width: 200px;
     height: 50px;
-    color: #333333;
+    width: 400px;
+    padding-left: 5px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    font-size: 15px;
+    border: 1px solid white;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
-.change_patient_yesbtn button{
+.change_patient_id input:hover, .change_patient_name input:hover, .change_patient_age input:hover, .change_patient_sex select:hover,
+.change_patient_phone_num input:hover, .change_patient_email input:hover, .change_patient_managerid input:hover,
+.change_patient_emergency_num input:hover, .change_patient_address input:hover{
+    border: 3px solid #002455;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.change_patient_yesbtn button {
     background-color: white;
     width: 130px;
     height: 40px;
     color: #6D8FE4;
-    margin-left: 1200px;
     margin-top: 10px;
     text-align: center;
     border: 3px solid #6D8FE4;
@@ -46,20 +68,26 @@
     font-size: 22px;
 }
 
-.change_patient_nobtn button{
+.change_patient_nobtn button {
     background-color: white;
     width: 130px;
     height: 40px;
     color: #ababab;
-    margin-left: 1200px;
     margin-top: 10px;
+    margin-left: 5px;
     text-align: center;
     border: 3px solid #ababab;
     border-radius: 10px;
     font-size: 22px;
 }
 
-.change_patient_button:hover{
+.change_patient_button {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.change_patient_button button:hover{
     font-weight: 600;
     cursor: pointer;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
