--- a/src/pages/ManagePage/PatientInfoForm.css
+++ b/src/pages/ManagePage/PatientInfoForm.css
@@ -7,7 +7,7 @@
 .patient_infoform_page{
     width: 1000px;
     height: 500px;
-    margin-left: 480px;
+    margin-left: 500px;
     margin-bottom: 50px;
     margin-top: 30px;
     border-radius: 16px;
@@ -16,12 +16,15 @@
 }
 
 .patient_infoform_text {
+    width: 250px;
+    height: 50px;
     margin-top: 40px;
     margin-bottom: 15px;
-    margin-right: 800px;
+    margin-left: 500px;
     font-size: 30px;
     font-weight: 600;
     color: #333333;
+    text-align: left;
 }
 
 .patient_infoform_total_box{
