--- a/src/pages/AuthPage/MyPage.css
+++ b/src/pages/AuthPage/MyPage.css
@@ -54,14 +54,6 @@
     margin-left: 80px;
 }
 
-.mypage_total_btn{
-    display: flex;
-    justify-content: left;
-    width: 85px;
-    height: 40px;
-    margin-top: 10px;
-}
-
 .mypage_first_info{
     display: flex;
     margin-top: 60px;
@@ -113,34 +105,64 @@
     display: flex;
 }
 
-.mypage_edit-menu-btn {
-    width: 36px;
-    height: 36px;
-    background-image: url('./free-icon-edit.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    border: none;
-    cursor: pointer;
-    position: relative;
-    top: 0px;
-    z-index: 100;
-    background-color: transparent;
+.mypage_total_btn {
+    display: flex;
+    justify-content: left;
+    width: 210px;
+    height: 40px;
+    margin-left: 530px;
+    margin-top: 50px;
 }
 
-.mypage_delete-menu-btn {
-    width: 32px;
-    height: 32px;
-    background-image: url('./free-icon-recycle-bin-outline-symbol-inside-a-circle.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    border: none;
+.mypage_edit_menu_btn {
+    background-color: white;
+    width: 100px;
+    height: 40px;
+    margin-right: 5px;
+    border: 3px solid #6D8FE4;
+    border-radius: 10px;
+}
+
+.mypage_delete_menu_btn {
+    background-color: white;
+    width: 100px;
+    height: 40px;
+    margin-left: 5px;
+    border: 3px solid #ababab;
+    border-radius: 10px;
+}
+
+.mypage_edit_btn_text{
+    width: 80px;
+    line-height: 36px;
+    color: #6D8FE4;
+    text-align: center;
+    font-size: 15px;
+}
+
+.mypage_delete_btn_text{
+    width: 80px;
+    line-height: 36px;
+    color: #ababab;
+    text-align: center;
+    font-size: 15px;
+}
+
+.mypage_edit_btn img, .mypage_delete_btn img {
+    width: 20px;
+    height: 20px;
+    margin: 8px 5px;
+}
+
+.mypage_edit_btn_input, .mypage_delete_btn_input{
+    display: flex;
+    justify-content: left;
+}
+
+.mypage_edit_menu_btn:hover, .mypage_delete_menu_btn:hover{
     cursor: pointer;
-    position: relative;
-    top: 0px;
-    z-index: 100;
-    background-color: transparent;
+    font-weight: 600;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .modal {
