--- a/src/pages/MainPage/MiniDashboard.css
+++ b/src/pages/MainPage/MiniDashboard.css
@@ -41,6 +41,7 @@
 }
 
 .minidashboard_address:hover{
+    cursor: pointer;
     text-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
