--- a/src/pages/MainPage/MiniPatientboard.css
+++ b/src/pages/MainPage/MiniPatientboard.css
@@ -42,6 +42,7 @@
 }
 
 .minidashboard_name:hover{
+    cursor: pointer;
     text-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
